<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.signin.SigninFragment"
    android:padding="24dp">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextView.PoppinsMedium16sp020202"
        android:text="@string/phone_no"
        />

    <EditText
        android:id="@+id/edtPhone"
        style="@style/EditText.PoppinsLight14sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_phonenumber"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextView.PoppinsMedium16sp020202"
        android:text="@string/address"
        />

    <EditText
        android:id="@+id/edtAddress"
        style="@style/EditText.PoppinsLight14sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_address"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextView.PoppinsMedium16sp020202"
        android:text="@string/house_no"
        />

    <EditText
        android:id="@+id/edtHouseNo"
        style="@style/EditText.PoppinsLight14sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/type_your_housenumber"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextView.PoppinsMedium16sp020202"
        android:text="@string/city"
        />

    <EditText
        android:id="@+id/edtCity"
        style="@style/EditText.PoppinsLight14sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/select_your_city"
        android:inputType="textPassword"
        android:minHeight="48dp" />


    <Button
        android:id="@+id/btnSignupNow"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/signup_now"
        app:cornerRadius="8dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>