<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_signup_success"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            style="@style/TextView.PoppinsMedium22sp020202"
            android:text="@string/completed_signup"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView.PoppinsMedium14sp020202"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/desc_completed_signup"/>

        <Button
            android:layout_width="wrap_content"
            android:paddingRight="60dp"
            android:layout_marginTop="40dp"
            android:paddingLeft="60dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/find_food"
            style="@style/Button.Primary"
            />

    </LinearLayout>

</LinearLayout>