<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="24dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivPoster"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sample_product2" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView.PoppinsMedium16sp020202"
        android:layout_marginStart="12dp"
        android:text="@string/sample_product"
        app:layout_constraintStart_toEndOf="@+id/ivPoster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@id/tvJumlahItem"
        android:layout_width="wrap_content"
        style="@style/TextView.Poppins14sp020202"
        android:textSize="13sp"
        android:textColor="@color/grey"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/jumlah_item"
        app:layout_constraintStart_toEndOf="@+id/ivPoster"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView.Poppins14sp020202"
        android:textSize="13sp"
        android:textColor="@color/grey"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/harga"
        app:layout_constraintStart_toEndOf="@+id/tvJumlahItem"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>