<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.order.OrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/layout_toolbar"
            android:layout_width="match_parent"
            android:id="@+id/include"
            android:layout_height="wrap_content"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsOrder"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            app:tabTextColor="@color/black"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            style="@style/TabLayout"
            android:background="@color/white"
            android:layout_height="wrap_content"/>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/ic_empty_order"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            style="@style/TextView.PoppinsMedium22sp020202"
            android:text="@string/ouch"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView.PoppinsMedium14sp020202"
            android:textAlignment="center"
            android:text="@string/desc_empty_order"/>

        <Button
            android:layout_width="200dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            style="@style/Button.Primary"
            android:text="@string/find_food"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>